# testsuite

./: '  .gitignore  Cargo.toml  Makefile  README.md  c.json  person.json  æ  ø
.github/workflows/: build.yml  clippy.yml
src/: lib.rs  main.rs  multithreaded.rs  server.rs  singlethreaded.rs  tui.rs
src/tui/: elements.rs  style.rs
