[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["multithreaded"]
multithreaded = []

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.16", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
