[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["multithreaded"]
multithreaded = []

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = "0.4.31"
clap = {version = "4.4.16", features = ["derive"]}
crossterm = {version= "0.27.0", features=["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.2"
indexmap = "2.1.0"
itertools = "0.12.0"
log = "0.4.20"
nanohttp = "0.2.0"
serde = {version = "1.0", features = ["derive"]}
simplelog = "0.12.1"
tokio = {version = "1.35.1", features = ["full"]}
